# bioimageit_core

./: .buildinfo  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  Pipfile  README.md  bioimageit_core.api.html  bioimageit_core.containers.html  bioimageit_core.core.html  bioimageit_core.html  bioimageit_core.metadata.html  bioimageit_core.plugins.html  bioimageit_core.processes.html  bioimageit_core.runners.html  bioimagepy.core.html  bioimagepy.html  bioimagepy.metadata.html  bioimagepy.processes.html  bioimagepy.runners.html  config.py  config_sample.json  genindex.html  gitlab-ci.yml  guide.html  index.html  install.html  intro.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  toolboxes.py  toolboxesexport.py  tox.ini  tutorial_omero.html  (+5 more)
_sources/: bioimageit_core.core.rst.txt  bioimageit_core.plugins.rst.txt  bioimageit_core.processes.rst.txt  bioimageit_core.rst.txt  bioimageit_core.runners.rst.txt  bioimagepy.core.rst.txt  bioimagepy.runners.rst.txt  guide.rst.txt  index.rst.txt  install.rst.txt  intro.rst.txt  tutorial_write_a_data_plugin.rst.txt  tutorial_write_a_metadata_plugin.rst.txt  tutorial_write_a_runner_plugin.rst.txt
bioimageit_core/: __init__.py  config.py  data.py  dataset.py  experiment.py  formats.py  pipeline.py  process.py  runner.py  toolboxes.py
bioimagepy/: __init__.py  config.py  core.py  data.py  dataset.py  experiment.py  jupyter.py  metadata.py  omero.py  pipeline.py  process.py  runner.py  toolboxes.py
conda/: meta.yaml
examples/: experiment_demo.py  job_demo.py  (+3 more)
(+238 files in other folders)
