[metadata]
name = bioimageit_core
version = 0.1.3
author = Sylvain Prigent and BioImageIT team
author_email = bioimageit@gmail.com
url = https://github.com/bioimageit/bioimageit_core
license = BSD License
description = design biological data processing pipelines
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    bioimageit_formats
    PrettyTable>=1.0.1
    pyyaml>=5.3.1
    wget>=3.2
    fsspec>=2022.3.0
    paramiko>=2.11.0

[options.entry_points]
console_scripts =
    unit_wrapper = bioimageit_core.cli.unit_wrapper:main
